--- a/composer.json
+++ b/composer.json
@@ -53,7 +53,17 @@
         ],
         "dev": [
             "Composer\\Config::disableProcessTimeout",
-            "npx concurrently -c \"#93c5fd,#c4b5fd,#fb7185,#fdba74\" \"php artisan serve\" \"php artisan queue:listen --tries=1\" \"php artisan pail --timeout=0\" \"npm run dev\" --names=server,queue,logs,vite --kill-others"
+            "node scripts/dev.js"
+        ],
+        "dev:server": [
+            "@php artisan serve"
+        ],
+        "dev:queue": [
+            "@php artisan queue:listen --tries=1"
+        ],
+        "dev:simple": [
+            "Composer\\Config::disableProcessTimeout",
+            "npm run dev:concurrent"
         ],
         "test": [
             "@php artisan config:clear --ansi",
